Add first piece of file upload script

--- a/views/template/nav.jade
+++ b/views/template/nav.jade
@@ -10,7 +10,7 @@
     section.top-bar-section
       ul.left
         li.divider
-        li: a(href="/todos") To-Dos
+        li: a(href="/upload") Upload
       ul.right
 
         li.divider
