--- a/views/home/login.jade
+++ b/views/home/login.jade
@@ -4,4 +4,6 @@ include ../mixins/form-helper
 block content
   .row
     .small-6.columns
+      if newreg
+        p Thank you for signing up! Please log in below...
       include authentication-form
