--- a/views/admin/files.jade
+++ b/views/admin/files.jade
@@ -5,7 +5,7 @@ block content
   .row
     .small-12.columns
       p#delete-error
-      if files
+      if files.length
         table
           thead
             th Created
@@ -17,7 +17,7 @@ block content
           tbody
             each file in files
               tr
-                td= file.createdAt
+                td= moment(file.createdAt).format('MM/DD/YYYY')
                 td: b= file.post.title
                 td= file.name
                 td= file.createdBy
