--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -4,18 +4,18 @@ block content
   p#delete-error
   .row
     .small-12.columns
-      if userData
+      if userData.length
         table
           thead
-            th Email
             th Created
+            th Email
             th Role
             th
           tbody
             each u in userData
               tr
+                td= moment(u.createdAt).format('MM/DD/YYYY')
                 td= u.email
-                td= u.createdAt
                 td= u.isAdmin ? "Admin":"Subscriber"
                 if user.isAdmin && u.email !== user.email
                     td: a.button.delete-user.tiny.alert(data-user-id=u.id) Delete
