--- a/views/admin/newPost.jade
+++ b/views/admin/newPost.jade
@@ -5,4 +5,14 @@ block content
   .row
     .small-12.columns
       include post-form
-
+  if post
+    .row
+      .small-12.columns
+        h4 Images
+    if post.files
+      - var columns = 12 - (post.files.length * 2)
+      .row
+        each file in post.files
+          .small-2.columns
+            img(src='/uploads/'+post.id+'/'+file.name)
+        div(class='small-'+columns+' columns')
