--- a/less/app.less
+++ b/less/app.less
@@ -1,12 +1,50 @@
 @base: #ffffff;
+@navBg: #444444;
+@navDivider: #777777;
 
 body{
   background-color: @base;
 }
 
-.top-bar {
-  overflow: hidden;
+.contain-to-grid {
+  background-color: @navBg;
+
+  .top-bar {
+    overflow: hidden;
+    background-color: @navBg;
+  }
+
+  .top-bar-section {
+
+    ul {
+
+      li {
+        border-color: @navDivider;
+        background-color: @navBg;
+        a {
+          background-color: @navBg;
+        }
+      }
+
+      li.username {
+        line-height: 45px;
+        font-size: 14px;
+        color: white;
+        padding: 0 10px;
+      }
+    }
+  }
 }
+
+.bottom-bar{
+position: fixed;
+bottom: 0px;
+width: 100%;
+margin-bottom: 0px;
+height: 20px;
+background-color: @navBg;
+}
+
 
 .logo img{
   padding: 5px;
@@ -28,15 +66,6 @@ body{
 
 #postId {
   width: 50px;
-}
-
-li.username {
-  line-height: 45px;
-  background-color: #111111;
-
-  font-size: 14px;
-  color: white;
-  padding: 0 10px;
 }
 
 .file-thumb {
