--- a/views/template/nav.jade
+++ b/views/template/nav.jade
@@ -11,18 +11,23 @@
     section.top-bar-section
       ul.left
         li.divider
-        li: a(href="/admin") Admin
+        li: a(href="/posts") Posts
+        li.divider
       ul.right
-
+        if user && user.isAdmin
+          li.divider
+          li: a(href="/admin") Admin
         li.divider
         if user
           li.username= 'Logged in as: ' + user.email
           li.divider
           li: a#logout-button(href="#") Logout
+          li.divider
         else
           li: a(href="/register") Register
           li.divider
           li: a(href="/login") Login
+          li.divider
 
 .row
   .small-12.columns
