Add user profiling and update account with error checking

--- a/less/app.less
+++ b/less/app.less
@@ -26,7 +26,7 @@ body{
         }
       }
 
-      li.username {
+      li span.username {
         line-height: 45px;
         font-size: 14px;
         color: white;
@@ -56,8 +56,9 @@ background-color: @navBg;
   display: none;
 }
 
-#login-error, #register-error, #upload-error ,#delete-error, #post-error {
+#login-error, #register-error, #upload-error ,#delete-error, #post-error, #account-status {
   color: red;
+  font-style: italic;
 }
 
 #new-post textarea {
