--- a/views/template/nav.jade
+++ b/views/template/nav.jade
@@ -11,6 +11,8 @@
     section.top-bar-section
       ul.left
         li.divider
+        li: a(href="/profile") My Profile
+        li.divider
         li: a(href="/posts") Posts
         li.divider
       ul.right
@@ -19,7 +21,7 @@
           li: a(href="/admin") Admin
         li.divider
         if user
-          li.username= 'Logged in as: ' + user.email
+          li: span.username= user.email
           li.divider
           li: a#logout-button(href="#") Logout
           li.divider
