Fix: Headings loading seperate from content

--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -1,6 +1,9 @@
 extends ../template/layout
 
 block content
+  .row
+    .small-12.columns
+      h3= heading
   p#delete-error
   .row
     .small-12.columns
