--- a/views/admin/files.jade
+++ b/views/admin/files.jade
@@ -1,7 +1,9 @@
 extends ../template/layout
 
 block content
-
+  .row
+    .small-12.columns
+      h3= heading
   .row
     .small-12.columns
       p#delete-error
