--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -3,6 +3,9 @@ extends ../template/layout
 block content
   .row
     .small-12.columns
+      h3= heading
+  .row
+    .small-12.columns
       h1.subheader
         span
           a(href='/admin/users') Users:
