--- a/views/admin/posts.jade
+++ b/views/admin/posts.jade
@@ -1,7 +1,9 @@
 extends ../template/layout
 
 block content
-
+  .row
+    .small-12.columns
+      h3= heading
   .row
     .small-12.columns
       a.button.tiny.alert(href='/admin/posts/new') New Post
