--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -4,6 +4,9 @@ include ../mixins/form-helper
 block content
   .row
     .small-12.columns
+      h3= heading
+  .row
+    .small-12.columns
       div(id="myModal", class="reveal-modal", data-reveal)
         h2 Awesome. I have it.
         p(class="lead") Your couch.  It is mine.
