--- a/views/home/login.jade
+++ b/views/home/login.jade
@@ -3,6 +3,9 @@ include ../mixins/form-helper
 
 block content
   .row
+    .small-12.columns
+      h3= heading
+  .row
     .small-6.columns
       if signup
         p Thank you for signing up! Please log in below...
