--- a/views/home/register.jade
+++ b/views/home/register.jade
@@ -3,6 +3,9 @@ include ../mixins/form-helper
 
 block content
   .row
+    .small-12.columns
+      h3= heading
+  .row
     .small-4.columns
       include registration-form
 
