--- a/views/admin/files.jade
+++ b/views/admin/files.jade
@@ -3,7 +3,7 @@ extends ../template/layout
 block content
   .row
     .small-12.columns
-      h3= heading
+      h3 Files
   .row
     .small-12.columns
       p#delete-error
