Refactor: Account creation and update use async waterfall

--- a/less/app.less
+++ b/less/app.less
@@ -56,7 +56,7 @@ background-color: @navBg;
   display: none;
 }
 
-#login-error, #register-error, #upload-error ,#delete-error, #post-error, #account-status {
+.error-text {
   color: red;
   font-style: italic;
 }
