--- a/views/admin/post-form.jade
+++ b/views/admin/post-form.jade
@@ -1,4 +1,4 @@
-p#post-error
+p#post-error.error-text
 form#new-post(action='/admin/posts', method='post', enctype="multipart/form-data")
   fieldset
     legend Post Data
