--- a/views/admin/posts.jade
+++ b/views/admin/posts.jade
@@ -7,7 +7,7 @@ block content
       a.button.tiny.alert(href='/admin/posts/new') New Post
   .row
     .small-12.columns
-      p#delete-error
+      p#delete-error.error-text
       if posts.length
         table
           thead
