--- a/views/user/profile-form.jade
+++ b/views/user/profile-form.jade
@@ -13,4 +13,4 @@ form#profile(action='/profile', method='post')
       .small-12.columns: a#update-profile.button.radius.success.tiny Update Profile
     .row
       .small-12.columns
-        p#profile-status
+        p#profile-status.error-text
