--- a/views/user/profilepic-form.jade
+++ b/views/user/profilepic-form.jade
@@ -9,4 +9,4 @@ form#profilePic(action='/', method='post')
       .small-12.columns: a#update-profilePic.button.radius.success.tiny Update Picture
     .row
       .small-12.columns
-        p#profilePic-status
+        p#profilePic-status.error-text
