--- a/views/admin/files.jade
+++ b/views/admin/files.jade
@@ -4,7 +4,7 @@ block content
 
   .row
     .small-12.columns
-      p#delete-error
+      p#delete-error.error-text
       if files.length
         table
           thead
