--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -1,7 +1,7 @@
 extends ../template/layout
 
 block content
-  p#delete-error
+  p#delete-error.error-text
   .row
     .small-12.columns
       if userData.length
