--- a/views/home/posts.jade
+++ b/views/home/posts.jade
@@ -6,10 +6,11 @@ block content
     .small-12.columns
       if posts
         each post in posts
+          hr
           h3.subheader= post.title
           .row
-            .small-6.columns.content
+            .large-6.small-12.columns.content
               p= post.content
-            .small-6.columns.images
+            .large-6.small-12.columns.images
               each image in post.files
                 img(src='/uploads/#{post.id}/#{image.name}')
