--- a/views/home/registration-form.jade
+++ b/views/home/registration-form.jade
@@ -11,4 +11,4 @@ form#registration(action='/', method='post')
       .small-12.columns: button#register.radius.success.tiny Register
     .row
       .small-12.columns
-        p#register-error
+        p#register-error.error-text
