--- a/views/user/profile.jade
+++ b/views/user/profile.jade
@@ -4,10 +4,19 @@ include ../mixins/form-helper
 block content
   .row
     .small-12.columns
-      span
-        a(href='/profile/edit') Edit profile
+      span: a(href='/account/edit') Edit Account Info
+      span= ' | '
+      span: a(href='/profile/edit') Edit Profile Info
   .row
     .small-12.columns
-      p: span= user.firstName + ' ' + user.lastName
-      p: span= user.email
-      p: span= user.city + ', ' + user.state
+      p
+        h4 Name:
+        span= profile.firstName
+        span= profile.lastName
+      p
+        h4 Email Address:
+        span= user.email
+      p
+        h4 Location:
+        span= profile.city
+        span= profile.state
