--- a/views/user/profile-form.jade
+++ b/views/user/profile-form.jade
@@ -8,7 +8,10 @@ form#profile(action='/profile', method='post')
     .row
       mixin field(12, 'text', 'city', 'City', profile ? profile.city:null)
     .row
-      mixin field(12, 'text', 'state', 'State', profile ? profile.state:null)
+      .small-12.columns
+        select(name="state", id="state", value=profile.state)
+          each state in states
+            option(value=state.abbr, selected=state.selected)= state.name
     .row
       .small-12.columns: a#update-profile.button.radius.success.tiny Update Profile
     .row
