--- a/views/user/profile.jade
+++ b/views/user/profile.jade
@@ -10,13 +10,12 @@ block content
   .row
     .small-12.columns
       p
-        h4 Name:
-        span= profile.firstName
-        span= profile.lastName
+        h4
+          span= profile.firstName ? profile.firstName : null
+          span= ' '
+          span= profile.lastName ? profile.lastName : null
       p
-        h4 Email Address:
         span= user.email
       p
-        h4 Location:
-        span= profile.city
-        span= profile.state
+        span= profile.city ? profile.city + ', ':null
+        span= profile.state ? profile.state:null
